--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "locally": "node -e \"console.log(require('./index').handler({}));\""
+    "locally": "node -e \"console.log(require('./index').handler({}));\"",
+    "zip": "zip -r output.zip . -x '*.git*'"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
     "dayjs": "^1.10.5",
+    "googleapis": "^75.0.0",
     "md5": "^2.3.0"
   }
 }
